--- a/day3-7/package.json
+++ b/day3-7/package.json
@@ -16,6 +16,7 @@
     "@sanity/vision": "^3.70.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "next": "^15.1.6",
